replace Collections occurrences with List, Set, or Map ones